--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "babel-plugin-import-glob-array": "^0.2.0",
     "mdx-prism": "^0.3.1",
-    "next": "9.5.5",
+    "next": "^10.0.1",
     "next-mdx-enhanced": "^4.0.0",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "reading-time": "^1.2.0",
     "remark-code-titles": "^0.1.1",
+    "sharp": "^0.26.2",
     "tailwindcss": "^1.9.2"
   },
   "devDependencies": {
