--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "tailwindcss": "^1.9.2"
   },
   "devDependencies": {
+    "globby": "^11.0.1",
     "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.1.2",
     "rehype": "^11.0.0"
   }
 }
