--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "reading-time": "^1.2.0",
     "remark-code-titles": "^0.1.1",
     "sharp": "^0.26.2",
+    "swr": "^0.3.9",
     "tailwindcss": "^1.9.2"
   },
   "devDependencies": {
