--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mdx-prism": "^0.3.1",
     "next": "^10.0.1",
     "next-mdx-enhanced": "^4.0.0",
+    "next-seo": "^4.17.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "reading-time": "^1.2.0",
