--- a/package.json
+++ b/package.json
@@ -8,27 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/typography": "0.5.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "babel-plugin-import-glob-array": "^0.2.0",
-    "mdx-prism": "^0.3.1",
-    "next": "^10.0.1",
-    "next-mdx-enhanced": "^4.0.0",
+    "next": "^12.1.4",
     "next-seo": "^4.17.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "reading-time": "^1.2.0",
-    "remark-code-titles": "^0.1.1",
-    "sharp": "^0.26.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "swr": "^0.3.9",
-    "tailwindcss": "^1.9.2"
+    "tailwindcss": "3.0.23"
   },
   "devDependencies": {
     "globby": "^11.0.1",
-    "postcss-preset-env": "^6.7.0",
+    "postcss": "^8.4.6",
     "prettier": "^2.1.2",
     "rehype": "^11.0.0"
   }
