--- a/package.json
+++ b/package.json
@@ -8,22 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
-    "@tailwindcss/typography": "0.5.2",
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-brands-svg-icons": "^5.15.1",
-    "@fortawesome/free-regular-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.11",
-    "next": "^12.1.4",
-    "next-seo": "^4.17.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "swr": "^0.3.9",
-    "tailwindcss": "3.0.23"
+    "@tailwindcss/typography": "0.5.3",
+    "next": "12.2.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "swr": "1.3.0",
+    "tailwindcss": "3.1.5"
   },
   "devDependencies": {
-    "globby": "^11.0.1",
-    "postcss": "^8.4.6",
-    "prettier": "^2.1.2",
-    "rehype": "^11.0.0"
+    "@types/node": "^18.0.4",
+    "@types/react": "18.0.15",
+    "eslint": "8.19.0",
+    "eslint-config-next": "12.2.2",
+    "globby": "13.1.2",
+    "postcss": "^8.4.13",
+    "prettier": "2.7.1",
+    "typescript": "^4.7.3"
   }
 }
